public/css/styles.css
/* ... */
.hover\:drop-shadow-2xl:hover {
  --tw-drop-shadow: drop-shadow(0 25px 25px rgba(0, 0, 0, 0.15));
  filter: var(--tw-filter);
}

.active\:border-yellow-700:active {
  --tw-border-opacity: 1;
  border-color: rgba(180, 83, 9, var(--tw-border-opacity));
}

.active\:bg-yellow-700:active {
  --tw-bg-opacity: 1;
  background-color: rgba(180, 83, 9, var(--tw-bg-opacity));
}

.active\:text-yellow-400:active {
  --tw-text-opacity: 1;
  color: rgba(251, 191, 36, var(--tw-text-opacity));
}

.group:hover .group-hover\:overflow-y-auto {
  overflow-y: auto;
}

.group:hover .group-hover\:text-gold-light {
  --tw-text-opacity: 1;
  color: rgba(255, 215, 0, var(--tw-text-opacity));
}

.group:hover .group-hover\:text-yellow-600 {
  --tw-text-opacity: 1;
  color: rgba(217, 119, 6, var(--tw-text-opacity));
}

.group:hover .group-hover\:text-pink-500 {
  --tw-text-opacity: 1;
  color: rgba(236, 72, 153, var(--tw-text-opacity));
}

.group:hover .group-hover\:text-gray-800 {
  --tw-text-opacity: 1;
  color: rgba(31, 41, 55, var(--tw-text-opacity));
}

.group:hover .group-hover\:text-yellow-500 {
  --tw-text-opacity: 1;
  color: rgba(245, 158, 11, var(--tw-text-opacity));
}

.dark .dark\:block {
  display: block;
}

.dark .dark\:inline {
  display: inline;
}

.dark .dark\:hidden {
  display: none;
}

.dark .dark\:border-\[\#c7a246\] {
  --tw-border-opacity: 1;
  border-color: rgba(199, 162, 70, var(--tw-border-opacity));
}

.dark .dark\:border-gray-300 {
  --tw-border-opacity: 1;
  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
}

.dark .dark\:border-\[\#410e05\] {
  --tw-border-opacity: 1;
  border-color: rgba(65, 14, 5, var(--tw-border-opacity));
}

.dark .dark\:border-\[\#303030\] {
  --tw-border-opacity: 1;
  border-color: rgba(48, 48, 48, var(--tw-border-opacity));
}

.dark .dark\:border-transparent {
  border-color: transparent;
}

.dark .dark\:border-gray-600 {
  --tw-border-opacity: 1;
  border-color: rgba(75, 85, 99, var(--tw-border-opacity));
}

.dark .dark\:border-gray-400 {
  --tw-border-opacity: 1;
  border-color: rgba(156, 163, 175, var(--tw-border-opacity));
}

.dark .dark\:border-\[\#555555\] {
  --tw-border-opacity: 1;
  border-color: rgba(85, 85, 85, var(--tw-border-opacity));
}

.dark .dark\:bg-\[\#171717\] {
  --tw-bg-opacity: 1;
  background-color: rgba(23, 23, 23, var(--tw-bg-opacity));
}

.dark .dark\:bg-\[\#141414\] {
  --tw-bg-opacity: 1;
  background-color: rgba(20, 20, 20, var(--tw-bg-opacity));
}

.dark .dark\:bg-\[\#1E1E1E\] {
  --tw-bg-opacity: 1;
  background-color: rgba(30, 30, 30, var(--tw-bg-opacity));
}

.dark .dark\:bg-\[\#791c0c\] {
  --tw-bg-opacity: 1;
  background-color: rgba(121, 28, 12, var(--tw-bg-opacity));
}

.dark .dark\:bg-\[\#272727\] {
  --tw-bg-opacity: 1;
  background-color: rgba(39, 39, 39, var(--tw-bg-opacity));
}

.dark .dark\:bg-\[\#353535\] {
  --tw-bg-opacity: 1;
  background-color: rgba(53, 53, 53, var(--tw-bg-opacity));
}

.dark .dark\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
  background-color: rgba(0,0,0,0.7);
}

.dark .dark\:bg-gray-400 {
  --tw-bg-opacity: 1;
  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
}

.dark .dark\:bg-\[\#1a1a1a\] {
  --tw-bg-opacity: 1;
  background-color: rgba(26, 26, 26, var(--tw-bg-opacity));
}

.dark .dark\:bg-\[\#2b2b2b\] {
  --tw-bg-opacity: 1;
  background-color: rgba(43, 43, 43, var(--tw-bg-opacity));
}

.dark .dark\:bg-gray-800 {
  --tw-bg-opacity: 1;
  background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
}

.dark .dark\:bg-\[\#222222\] {
  --tw-bg-opacity: 1;
  background-color: rgba(34, 34, 34, var(--tw-bg-opacity));
}

.dark .dark\:text-gray-300 {
  --tw-text-opacity: 1;
  color: rgba(209, 213, 219, var(--tw-text-opacity));
}

.dark .dark\:text-\[\#c7a246\] {
  --tw-text-opacity: 1;
  color: rgba(199, 162, 70, var(--tw-text-opacity));
}

.dark .dark\:text-gray-200 {
  --tw-text-opacity: 1;
  color: rgba(229, 231, 235, var(--tw-text-opacity));
}

.dark .dark\:text-\[\#494949\] {
  --tw-text-opacity: 1;
  color: rgba(73, 73, 73, var(--tw-text-opacity));
}

.dark .dark\:text-\[\#444444\] {
  --tw-text-opacity: 1;
  color: rgba(68, 68, 68, var(--tw-text-opacity));
}

.dark .dark\:text-gray-400 {
  --tw-text-opacity: 1;
  color: rgba(156, 163, 175, var(--tw-text-opacity));
}

.dark .dark\:text-yellow-500 {
  --tw-text-opacity: 1;
  color: rgba(245, 158, 11, var(--tw-text-opacity));
}

.dark .dark\:text-\[\#ADAEAD\] {
  --tw-text-opacity: 1;
  color: rgba(173, 174, 173, var(--tw-text-opacity));
}

.dark .dark\:opacity-5 {
  opacity: 0.05;
}

.dark .dark\:shadow {
  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.dark .dark\:hover\:border-gold-light:hover {
  --tw-border-opacity: 1;
  border-color: rgba(255, 215, 0, var(--tw-border-opacity));
}

.dark .dark\:hover\:border-yellow-500:hover {
  --tw-border-opacity: 1;
  border-color: rgba(245, 158, 11, var(--tw-border-opacity));
}

.dark .dark\:hover\:border-transparent:hover {
  border-color: transparent;
}

.dark .dark\:hover\:bg-\[\#8f220e\]:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(143, 34, 14, var(--tw-bg-opacity));
}

.dark .dark\:hover\:bg-\[\#363636\]:hover {
  --tw-bg-opacity: 1;
  background-color: rgba(54, 54, 54, var(--tw-bg-opacity));
}

.dark .dark\:hover\:text-yellow-500:hover {
  --tw-text-opacity: 1;
  color: rgba(245, 158, 11, var(--tw-text-opacity));
}

.dark .dark\:active\:border-\[\#6e1a0b\]:active {
  --tw-border-opacity: 1;
  border-color: rgba(110, 26, 11, var(--tw-border-opacity));
}

.dark .dark\:active\:bg-\[\#6e1a0b\]:active {
  --tw-bg-opacity: 1;
  background-color: rgba(110, 26, 11, var(--tw-bg-opacity));
}

.dark .group:hover .dark\:group-hover\:text-gold-light {
  --tw-text-opacity: 1;
  color: rgba(255, 215, 0, var(--tw-text-opacity));
}
/* ... */

